--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
 <body>
   <!--Tee tehtävät tänne-->
+<a href="index2.html">Aleksis kivi</a>
 <h1>Seitsemän veljestä</h1>
 <!-- Kuva esittää Seitsemän veljestä-kirjan ensimmäistä sivua -->
 <img src="https://upload.wikimedia.org/wikipedia/commons/a/a2/Seitsem%C3%A4n_veljest%C3%A4.png" alt="Seitsemän veljestä" height="440" width="310"/>
