--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 
 <body>
   <!--Tee tehtävät tänne-->
-<a href="index2.html">Aleksis kivi</a>
 <h1>Seitsemän veljestä</h1>
 <!-- Kuva esittää Seitsemän veljestä-kirjan ensimmäistä sivua -->
 <img src="https://upload.wikimedia.org/wikipedia/commons/a/a2/Seitsem%C3%A4n_veljest%C3%A4.png" alt="Seitsemän veljestä" height="440" width="310"/>
@@ -33,9 +32,9 @@
   </ul>
 </ul>
 <h3>Ensimmäinen luku</h3>
-<p><strong>Jukolan</strong> talo, eteläisessä<em> Hämeessä</em>, seisoo erään mäen pohjoisella rinteellä, liki<strong><em> Toukolan kylää.</em></strong></p>
+<p><strong>Jukolan</strong> talo, eteläisessä<em> Hämeessä</em>, seisoo erään mäen pohjoisella rinteellä, liki<strong><em> Toukolan</em></strong> kylää.</p>
 <p>Sen läheisin ympäristö on kivinen tanner, mutta alempana alkaa pellot, joissa, ennenkuin talo oli häviöön mennyt, aaltoili teräinen vilja.</p>
-<em>jatkuu..<em>
+<em class="jatko">jatkuu..</em>
 </body>
 
 </html>
